added nav bar content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         </title>
     </head>
     <body>
-        Hey, this is my port folio
+        <div class="topnav">
+            <a class="active" href="#about">< About ></a>
+            <a href="#Skills">< Skills ></a>
+            <a href="#Projects">< Projects ></a>
+            <a href="#Work">< Work ></a>
+            <a href="#Contact">< Contact ></a>
+          </div>
     </body>
 </html>
