--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
         <title>
             Abhishek Bonageri
         </title>
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <div class="topnav">
-            <a class="active" href="#about">< About ></a>
-            <a href="#Skills">< Skills ></a>
-            <a href="#Projects">< Projects ></a>
-            <a href="#Work">< Work ></a>
-            <a href="#Contact">< Contact ></a>
+            <h3>AB</h3>
+            <h3>< About ><h3>
+            <h3>< Skills ></h3>
+            <h3>< Projects ></h3>
+            <h3>< Work ></h3>
+            <h3>< Contact ></h3>
           </div>
     </body>
 </html>
