--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </title>
 
         <!-- title bar icon -->
-        <link rel = "icon" href = "res/logo1.png" type = "image/x-icon?">
+        <link rel = "icon" href = "res/logo1.png?" type = "image/png">
         
         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
         <meta charset="utf-8">
