click to navigate between pages added

--- a/scrollsnap.html
+++ b/scrollsnap.html
@@ -22,11 +22,12 @@
                 <button class="mobile-nav-toggle" area-controls="primary-navigation" area-expanded="false">-</button>
                 <div  class="menu ">
                     <ul data-visible="false" class="primary-navigation flex">
-                        <li>About</li>
-                        <li>Skills</li>
-                        <li>Projects</li>
-                        <li>Work</li>
-                        <li id="res">Resume</li>
+                        <li><a href="#About">About</a></li>
+                        <li><a href="#Skills">Skills</a></li>
+                        <li><a href="#Projects">Projects</a></li>
+                        <li><a href="#Work">Work</a></li>
+                        <li id="res"><a class="navbar-brand mx-auto" href="res/resume.pdf" target="_blank">Resume</a></li>
+                        <!-- <a class="navbar-brand mx-auto" href="res/resume.pdf" target="_blank"><font color="#E1B711" face="arial,helvetica">6.</font> Resume</a> -->
                     </ul>
                 </div>
                 
@@ -35,19 +36,19 @@
                 <h1>Hi this is Intro</h1>
             </div>
         </section>
-        <section class="About">
+        <section id="About" class="About">
             <h1>About</h1>
         </section>
-        <section class="Skills">
+        <section id="Skills" class="Skills">
             <h1>Skills</h1>
         </section>
-        <section class="Projects">
+        <section id ="Projects" class="Projects">
             <h1>Projects</h1>
         </section>
-        <section class="Work">
+        <section id="Work" class="Work">
             <h1>Work</h1>
         </section>
-        <section class="Contact">
+        <section id="Contact" class="Contact">
             <h1>Contact</h1>
         </section>
     </div>
