smooth scroll and fixed nav bar done

--- a/scrollsnap.html
+++ b/scrollsnap.html
@@ -26,6 +26,7 @@
                         <li><a href="#Skills">Skills</a></li>
                         <li><a href="#Projects">Projects</a></li>
                         <li><a href="#Work">Work</a></li>
+                        <li><a href="#Contact">Contact</a></li>
                         <li id="res"><a class="navbar-brand mx-auto" href="res/resume.pdf" target="_blank">Resume</a></li>
                         <!-- <a class="navbar-brand mx-auto" href="res/resume.pdf" target="_blank"><font color="#E1B711" face="arial,helvetica">6.</font> Resume</a> -->
                     </ul>
