--- a/scrollsnap.html
+++ b/scrollsnap.html
@@ -34,7 +34,11 @@
                 
             </div>
             <div class="intro-content">
-                <h1>Hi this is Intro</h1>
+                <h3>  Hello,  my name is </h3>
+                <h1>Abhishek Bonageri.</h1>
+                <h2>Student & A Full-stack developer.</h2>
+                <h5>I'm a Graduate Student at Illinois Tech, Chicago. <br>And currently looking for summer internships(2022)</h5>
+                <!-- <h5>and currently looking for summer internships(2022)</h5> -->
             </div>
         </section>
         <section id="About" class="About">
