intro modified a little

--- a/scrollsnap.html
+++ b/scrollsnap.html
@@ -37,8 +37,11 @@
                 <h3>  Hello,  my name is </h3>
                 <h1>Abhishek Bonageri.</h1>
                 <h2>Student & A Full-stack developer.</h2>
-                <h5>I'm a Graduate Student at Illinois Tech, Chicago. <br>And currently looking for summer internships(2022)</h5>
+                <h5>I'm a Graduate Student at Illinois Tech, Chicago.<br> I build Web and Mobile applicatoins and i'm currently looking for summer internships(2022).</h5>
                 <!-- <h5>and currently looking for summer internships(2022)</h5> -->
+                <div class="btn">
+                    <button class="get-in-touch">Get in touch __ !</button>
+                </div>
             </div>
         </section>
         <section id="About" class="About">
