--- a/scrollsnap.html
+++ b/scrollsnap.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snap</title>
     <link rel="stylesheet" href="sticky.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredoka">
+    <!-- <link rel="stylesheet" href="s.css"> -->
     <script src="main.js" defer></script>
 </head>
 <body>
     <div class="container">
+        <div class="splash">
+            <h1 class="fade-in">Welcome to my portfolio.</h1>
+        </div>
         <section class="Intro">    
             <div class="header ">
                 <div class="logo">
@@ -17,7 +22,8 @@
                     <!-- <a href="#"><i class="fa-brands fa-adn"></i></a>  -->
                     <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc.<path d="M248 167.5l64.9 98.8H183.1l64.9-98.8zM496 256c0 136.9-111.1 248-248 248S0 392.9 0 256 111.1 8 248 8s248 111.1 248 248zm-99.8 82.7L248 115.5 99.8 338.7h30.4l33.6-51.7h168.6l33.6 51.7h30.2z"/></svg> -->
                     <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc.<path d="M248 167.5l64.9 98.8H183.1l64.9-98.8zM496 256c0 136.9-111.1 248-248 248S0 392.9 0 256 111.1 8 248 8s248 111.1 248 248zm-99.8 82.7L248 115.5 99.8 338.7h30.4l33.6-51.7h168.6l33.6 51.7h30.2z"/></svg> -->
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc.<path d="M248 167.5l64.9 98.8H183.1l64.9-98.8zM496 256c0 136.9-111.1 248-248 248S0 392.9 0 256 111.1 8 248 8s248 111.1 248 248zm-99.8 82.7L248 115.5 99.8 338.7h30.4l33.6-51.7h168.6l33.6 51.7h30.2z"/></svg>
+                    <a href="#intro-content"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc.<path d="M248 167.5l64.9 98.8H183.1l64.9-98.8zM496 256c0 136.9-111.1 248-248 248S0 392.9 0 256 111.1 8 248 8s248 111.1 248 248zm-99.8 82.7L248 115.5 99.8 338.7h30.4l33.6-51.7h168.6l33.6 51.7h30.2z"/></svg></a>
+
                 </div>
                 <button class="mobile-nav-toggle" area-controls="primary-navigation" area-expanded="false">-</button>
                 <div  class="menu ">
@@ -25,7 +31,7 @@
                         <li><a href="#About">About</a></li>
                         <li><a href="#Skills">Skills</a></li>
                         <li><a href="#Projects">Projects</a></li>
-                        <li><a href="#Work">Work</a></li>
+                        <li><a href="#Experience">Experience</a></li>
                         <li><a href="#Contact">Contact</a></li>
                         <li id="res"><a class="navbar-brand mx-auto" href="res/resume.pdf" target="_blank">Resume</a></li>
                         <!-- <a class="navbar-brand mx-auto" href="res/resume.pdf" target="_blank"><font color="#E1B711" face="arial,helvetica">6.</font> Resume</a> -->
@@ -33,19 +39,30 @@
                 </div>
                 
             </div>
-            <div class="intro-content">
+            <div id="intro-content" class="intro-content">
                 <h3>  Hello,  my name is </h3>
                 <h1>Abhishek Bonageri.</h1>
                 <h2>Student & A Full-stack developer.</h2>
                 <h5>I'm a Graduate Student at Illinois Tech, Chicago.<br> I build Web and Mobile applicatoins and i'm currently looking for summer internships(2022).</h5>
                 <!-- <h5>and currently looking for summer internships(2022)</h5> -->
-                <div class="btn">
-                    <button class="get-in-touch">Get in touch __ !</button>
-                </div>
+                <!-- <div class="btn">
+                    <a href="#Contact"><button  href="#Contact" class="get-in-touch">Get in touch __ !</button></a>
+                </div> -->
+                <div class="box-1">
+                    <a href="#Contact">
+                        <div class="btnn btn-one">
+                            <span> Get in touch __!</span>
+                        </div>
+                    </a>
+                  </div>
+
+                
             </div>
         </section>
         <section id="About" class="About">
-            <h1>About</h1>
+            <div class="About-content">
+
+            </div>
         </section>
         <section id="Skills" class="Skills">
             <h1>Skills</h1>
@@ -53,8 +70,8 @@
         <section id ="Projects" class="Projects">
             <h1>Projects</h1>
         </section>
-        <section id="Work" class="Work">
-            <h1>Work</h1>
+        <section id="Experience" class="Experience">
+            <h1>Experience</h1>
         </section>
         <section id="Contact" class="Contact">
             <h1>Contact</h1>
