transparent and blur nav bar added

--- a/scrollsnap.html
+++ b/scrollsnap.html
@@ -16,7 +16,7 @@
             <h1 class="fade-in">Welcome to my portfolio.</h1>
         </div>
         <section class="Intro">    
-            <div class="header ">
+            <div class="header fade-in">
                 <div class="logo">
                     <!-- <img src="res/adn-brands.svg"/> -->
                     <!-- <a href="#"><i class="fa-brands fa-adn"></i></a>  -->
