form changes made

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Snap</title>
+    <title>Abhishek Bonageri</title>
     <link rel="stylesheet" href="sticky.css" />
     <link
       rel="stylesheet"
@@ -134,7 +134,7 @@
                     </ul> -->
           </div>
           <div class="c-info email-form">
-            <form action="https://formsubmit.co/abhishek841998@gmail.com" method="POST">
+            <form action="https://formsubmit.co/abonageri@hawk.iit.edu" method="POST">
 
                 <input type="text" id="fname" name="firstname" placeholder="Full name.." required>
     
