--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   </head>
   <body>
     <div class="container">
-      <!-- <div class="splash">
+      <div class="splash">
             <h1 class="fade-in">Welcome to my portfolio.</h1>
-        </div> -->
+        </div>
       <section id="Intro" class="Intro">
         <div class="header">
           <div class="logo">
