--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Fredoka"
     />
-    <!-- <link src="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
+    <link src="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link
       href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css"
       rel="stylesheet"
@@ -116,7 +116,7 @@
                 <a
                   href="http://www.linkedin.com/in/abhishek-bonageri"
                   target="_blank"
-                  ><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i
+                  ><i class="fa fa-linkedin-square fa-2x" ></i    
                 ></a>
               </li>
               <li onclick="copyPhone()">
