font awesom changes done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link src="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link src="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    
+
 
     <link
       href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css"
@@ -120,14 +120,14 @@
                 <a
                   href="http://www.linkedin.com/in/abhishek-bonageri"
                   target="_blank"
-                  ><i class="fa fa-linkedin-square fa-2x" ></i    
-                ></a>
+                  ><img title="Open Link" class="contact-icons-svg" background="white" src="res/linkedin-brands (1).svg" alt="Linkedin">
+                </a>
               </li>
               <li onclick="copyPhone()">
-                <i class="fa fa-phone-square fa-2x" aria-hidden="true"></i>
+                <img title="click to copy Phone Number" class="contact-icons-svg" src="res/phone-solid.svg" alt="Phone">
               </li>
               <li onclick="copyEmail()">
-                <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+                <img title="click to copy Emails" class="contact-icons-svg" src="res/envelope-solid.svg" alt="email">
               </li>
             </ul>
 
