thanks directory added

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="c-info email-form">
             <form action="https://formsubmit.co/abonageri@hawk.iit.edu" method="POST">
 
-              <input type="hidden" name="_next" value="https://abhishekb.netlify.app/thanks.html">
+              <input type="hidden" name="_next" value="https://abhishekb.netlify.app/thanks/thanks.html">
               <input type="text" id="fname" name="firstname" placeholder="Full name.." required>
               <input type="email" id="email" name="email" placeholder="Email.." required>
               <textarea id="subject" name="subject" placeholder="Your Message.." style="height:180px" required></textarea>
