thanks html changed

--- a/thanks/thanks.html
+++ b/thanks/thanks.html
@@ -28,7 +28,7 @@
 
 	<footer class="site-footer" id="footer">
         <div class="navback">
-            <a href="index.html">Back to site</a>
+            <a href="../index.html">Back to site</a>
         </div>
 		<p class="site-footer__fineprint" id="fineprint">Copyright ©2014 | All Rights Reserved</p>
 	</footer>
