added skills page

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="splash">
-            <h1 class="fade-in">Welcome to my portfolio.</h1>
-        </div>
+      <!-- <div class="splash">
+        <h1 class="fade-in">Welcome to my portfolio.</h1>
+      </div> -->
       <section id="Intro" class="Intro">
         <div class="header">
           <div class="logo">
@@ -68,9 +68,9 @@
           </div>
         </div>
         <div id="intro-content" class="intro-content">
-          <h3>Hello, my name is</h3>
-          <h1>Abhishek Bonageri.</h1>
-          <h2>Student & A Full-stack developer.</h2>
+          <h2>Hello, I'm Abhishek <span style='font-size:50px;'>&#128075;</span></h2>
+          <!-- <h2> I'm Abhishek <span style='font-size:50px;'>&#128075;</span></h2> -->
+          <h1>Student & A Full Stack Software Engineer.</h1>
           <h5>
             I'm a Graduate Student at Illinois Tech, Chicago.<br />
             I build Web and Mobile applicatoins and i'm currently looking for
@@ -83,24 +83,74 @@
           <div class="box-1">
             <a href="#Contact">
               <div class="btnn btn-one">
-                <span> Get in touch __!</span>
+                <span> Hire Me __!</span>
               </div>
             </a>
           </div>
         </div>
       </section>
+
+
       <section id="About" class="About">
         <div class="About-content"></div>
       </section>
+
+
       <section id="Skills" class="Skills">
-        <h1>Skills</h1>
+        <!-- <h1>Skills</h1> -->
+        <div class="skills-container">
+        <div class="heading">
+          <h2>My Expertise</h2> 
+        </div>
+        <div class="skills-content">
+        <div class="titles">
+          <ul>
+            <li><h2>Languages</h2></li>
+            <li><h2>Web Tech</h2></li>
+            <li><h2>Databases</h2></li>
+            <li><h2>Frameworks</h2></li>
+            <li><h2>Concepts</h2></li>
+            <li><h2>Cloud</h2></li>
+            <li><h2>Other</h2></li>
+          </ul>
+        </div>
+        <!-- <div class="techstack">
+          <ul>
+            <li><div class="tech-icons">C, C++ , Java , python</div></li>
+            <li><div class="tech-icons">HTML, CSS, JavaScript , ReactJS , NodeJS</div></li>
+            <li><div class="tech-icons">MySql , PostgreSQL , MongoDB</div></li>
+            <li><div class="tech-icons">SpringBoot</div></li>
+            <li><div class="tech-icons">Machine Learning</div></li>
+            <li><div class="tech-icons">AWS ,GCP(Essesntials)</div></li>
+            <li><div class="tech-icons">Docker, Git, Jenkins, Postman , CI/CD , Junit</div></li>
+          </ul>
+        </div> -->
+        <div class="techstack">
+          <ul>
+            <li><div class="tech-icons"><img src="res/TechIcons/c.png" alt="C"/> <img src="res/TechIcons/c (1).png" alt="C++"/> <img src="res/TechIcons/java.png" alt="Java"/> <img src="res/TechIcons/python.png" alt="Python"></div></li>
+            <li><div class="tech-icons"> <img src="res/TechIcons/html5.png" alt="HTML"/><img src="res/TechIcons/css.png" alt="CSS"><img src="res/TechIcons/javascript.png" alt="JavaScript"><img src="res/TechIcons/react.png" alt="ReactJS"><img src="res/TechIcons/nodejs.png" alt="NodeJS"></div></li>
+            <li><div class="tech-icons"> <img src="res/TechIcons/mysql.png" alt="MySql"> <img src="res/TechIcons/postgresql.png" alt="PostgreSQL"><img src="res/TechIcons/mongodb.png" alt="MongoDB"></div></li>
+            <li><div class="tech-icons"><img src="res/TechIcons/1614368.png" alt="SpringBoot"></div></li>
+            <li><div class="tech-icons"><img src="" alt="Machine Learning"></div></li>
+            <li><div class="tech-icons"><img src="res/TechIcons/aws.png" alt="AWS"><img src="res/TechIcons/pngfind.com-google-logo-png-2017-4909861.png" alt="GCP(Essesntials)"> ,</div></li>
+            <li><div class="tech-icons"><img src="res/TechIcons/docker.png" alt="Docker"><img src="res/TechIcons/git.png" alt="Git"><img src="res/TechIcons/jenkins.png" alt="Jenkins"><img src="res/TechIcons/postman.png" alt="Postman"></div></li>
+          </ul>
+        </div>
+      </div>
+      </div>
       </section>
+
+
       <section id="Projects" class="Projects">
         <h1>Projects</h1>
       </section>
+
+
       <section id="Experience" class="Experience">
         <h1>Experience</h1>
       </section>
+
+
       <section id="Contact" class="Contact">
         <!-- <h1>Contact</h1> -->
         <div class="contact-container">
