--- a/index.html
+++ b/index.html
@@ -99,44 +99,65 @@
       <section id="Skills" class="Skills">
         <!-- <h1>Skills</h1> -->
         <div class="skills-container">
-        <div class="heading">
-          <h2>My Expertise</h2> 
+          <div class="heading">
+            <h2>My Expertise</h2> 
+          </div>
+          <div style="margin-bottom: vh; margin-top:2vh" class="content content--card">
+            <div class="card">
+              <h3 class="card__title">Front-End</h3>
+              <p style="word-spacing: 5em; font-weight:bold; font-size:1em"  class="card__body">HTML CSS JavaScript  ReactJS </p>
+            </div>
         </div>
-        <div class="skills-content">
-        <div class="titles">
-          <ul>
-            <li><h2>Languages</h2></li>
-            <li><h2>Web Tech</h2></li>
-            <li><h2>Databases</h2></li>
-            <li><h2>Frameworks</h2></li>
-            <li><h2>Concepts</h2></li>
-            <li><h2>Cloud</h2></li>
-            <li><h2>Other</h2></li>
-          </ul>
-        </div>
-        <!-- <div class="techstack">
-          <ul>
-            <li><div class="tech-icons">C, C++ , Java , python</div></li>
-            <li><div class="tech-icons">HTML, CSS, JavaScript , ReactJS , NodeJS</div></li>
-            <li><div class="tech-icons">MySql , PostgreSQL , MongoDB</div></li>
-            <li><div class="tech-icons">SpringBoot</div></li>
-            <li><div class="tech-icons">Machine Learning</div></li>
-            <li><div class="tech-icons">AWS ,GCP(Essesntials)</div></li>
-            <li><div class="tech-icons">Docker, Git, Jenkins, Postman , CI/CD , Junit</div></li>
-          </ul>
-        </div> -->
-        <div class="techstack">
-          <ul>
-            <li><div class="tech-icons"><img src="res/TechIcons/c.png" alt="C"/> <img src="res/TechIcons/c (1).png" alt="C++"/> <img src="res/TechIcons/java.png" alt="Java"/> <img src="res/TechIcons/python.png" alt="Python"></div></li>
-            <li><div class="tech-icons"> <img src="res/TechIcons/html5.png" alt="HTML"/><img src="res/TechIcons/css.png" alt="CSS"><img src="res/TechIcons/javascript.png" alt="JavaScript"><img src="res/TechIcons/react.png" alt="ReactJS"><img src="res/TechIcons/nodejs.png" alt="NodeJS"></div></li>
-            <li><div class="tech-icons"> <img src="res/TechIcons/mysql.png" alt="MySql"> <img src="res/TechIcons/postgresql.png" alt="PostgreSQL"><img src="res/TechIcons/mongodb.png" alt="MongoDB"></div></li>
-            <li><div class="tech-icons"><img src="res/TechIcons/1614368.png" alt="SpringBoot"></div></li>
-            <li><div class="tech-icons"><img src="" alt="Machine Learning"></div></li>
-            <li><div class="tech-icons"><img src="res/TechIcons/aws.png" alt="AWS"><img src="res/TechIcons/pngfind.com-google-logo-png-2017-4909861.png" alt="GCP(Essesntials)"> ,</div></li>
-            <li><div class="tech-icons"><img src="res/TechIcons/docker.png" alt="Docker"><img src="res/TechIcons/git.png" alt="Git"><img src="res/TechIcons/jenkins.png" alt="Jenkins"><img src="res/TechIcons/postman.png" alt="Postman"></div></li>
-          </ul>
-        </div>
+        <div style="margin-bottom: vh;" class="content content--card">
+          <div class="card">
+            <h3 class="card__title">Back-End</h3>
+            <p style="word-spacing: 5em; font-weight:bold; font-size:1em"  class="card__body">C  C++  Java  python  NodeJS</p>
+          </div>
       </div>
+      <div style="margin-bottom: vh;" class="content content--card">
+        <div class="card">
+          <h3 class="card__title">Cloud & Database</h3>
+          <p style="word-spacing: 2em; font-weight:bold; font-size:1em"  class="card__body">AWS GCP(Essesntials) MySql PostgreSQL  MongoDB</p>
+        </div>
+    </div>
+      <div style="margin-bottom: 0vh;" class="content content--card">
+        <div class="card">
+          <h3 class="card__title">Frameworks & Other</h3>
+          <p  style="word-spacing: 2em; font-weight:bold; font-size:1em" class="card__body">SpringBoot Hibernate Docker Git Jenkins Postman CI/CD  Junit</p>
+        </div>
+    </div>
+          <!-- <div class="skills-content"> -->
+          <!-- <div class="titles">
+            <ul>
+              <li><h2>Font-End</h2></li>
+              <li><h2>Backend</h2></li>
+              <li><h2>Cloud</h2></li>
+              <li><h2>Other</h2></li>
+            </ul>
+          </div> -->
+          <!-- <div class="techstack">
+            <ul>
+              <li><div class="tech-icons">C, C++ , Java , python</div></li>
+              <li><div class="tech-icons">HTML, CSS, JavaScript , ReactJS , NodeJS</div></li>
+              <li><div class="tech-icons">MySql , PostgreSQL , MongoDB</div></li>
+              <li><div class="tech-icons">SpringBoot</div></li>
+              <li><div class="tech-icons">Machine Learning</div></li>
+              <li><div class="tech-icons">AWS ,GCP(Essesntials)</div></li>
+              <li><div class="tech-icons">Docker, Git, Jenkins, Postman , CI/CD , Junit</div></li>
+            </ul>
+          </div> -->
+          <!-- <div class="techstack">
+            <ul>
+              <li><div class="tech-icons"><img src="res/TechIcons/c.png" alt="C"/> <img src="res/TechIcons/c (1).png" alt="C++"/> <img src="res/TechIcons/java.png" alt="Java"/> <img src="res/TechIcons/python.png" alt="Python"></div></li>
+              <li><div class="tech-icons"> <img src="res/TechIcons/html5.png" alt="HTML"/><img src="res/TechIcons/css.png" alt="CSS"><img src="res/TechIcons/javascript.png" alt="JavaScript"><img src="res/TechIcons/react.png" alt="ReactJS"><img src="res/TechIcons/nodejs.png" alt="NodeJS"></div></li>
+              <li><div class="tech-icons"> <img src="res/TechIcons/mysql.png" alt="MySql"> <img src="res/TechIcons/postgresql.png" alt="PostgreSQL"><img src="res/TechIcons/mongodb.png" alt="MongoDB"></div></li>
+              <li><div class="tech-icons"><img src="res/TechIcons/1614368.png" alt="SpringBoot"></div></li>
+              <li><div class="tech-icons"><img src="" alt="Machine Learning"></div></li>
+              <li><div class="tech-icons"><img src="res/TechIcons/aws.png" alt="AWS"><img src="res/TechIcons/pngfind.com-google-logo-png-2017-4909861.png" alt="GCP(Essesntials)"> ,</div></li>
+              <li><div class="tech-icons"><img src="res/TechIcons/docker.png" alt="Docker"><img src="res/TechIcons/git.png" alt="Git"><img src="res/TechIcons/jenkins.png" alt="Jenkins"><img src="res/TechIcons/postman.png" alt="Postman"></div></li>
+            </ul>
+          </div> -->
+        <!-- </div> -->
       </div>
       </section>
 
