--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
   </head>
   <body>
     <div class="container">
-      <!-- <div class="splash">
-        <h1 class="fade-in">Welcome to my portfolio.</h1>
-      </div> -->
+      <div class="splash">
+        <h1 class=" fade-in" >Welcome to my portfolio.</h1>
+        <span style="position: absolute;margin:auto 40%; bottom: 0em; display:table;" class="float-bottom fade-in"><p>Google CHROME Recomended.</p></span>
+      </div>
+    
       <section id="Intro" class="Intro">
         <div class="header">
           <div class="logo">
