few small modifications

--- a/index.html
+++ b/index.html
@@ -25,23 +25,24 @@
   </head>
   <body>
     <div class="container">
-      <div class="splash">
+      <!-- <div class="splash">
         <h1 class=" fade-in" >Welcome to my portfolio.</h1>
         <span style="position: absolute;margin:auto 40%; bottom: 0em; display:table;" class="float-bottom fade-in"><p>Google CHROME Recomended.</p></span>
-      </div>
+      </div> -->
     
       <section id="Intro" class="Intro">
         <div class="header">
           <div class="logo">
-           <a href="#Intro"
-              ><svg xmlns="http://www.w3.org/2000/svg" color="#ffffff" viewBox="0 0 496 512">
+           <a href="#Intro">
+              <!-- <svg xmlns="http://www.w3.org/2000/svg" color="#ffffff" viewBox="0 0 496 512">
                 ! Font Awesome Pro 6.0.0 by @fontawesome -
                 https://fontawesome.com License -
                 https://fontawesome.com/license (Commercial License) Copyright
                 2022 Fonticons, Inc.
                 <path fill="white"
                   d="M248 167.5l64.9 98.8H183.1l64.9-98.8zM496 256c0 136.9-111.1 248-248 248S0 392.9 0 256 111.1 8 248 8s248 111.1 248 248zm-99.8 82.7L248 115.5 99.8 338.7h30.4l33.6-51.7h168.6l33.6 51.7h30.2z"
-                /></svg>
+                /></svg> -->
+              <p style="font-size:1.5em">Abhishek.Bonageri</p>
             </a>
           </div>
           <button
@@ -72,7 +73,7 @@
         <div id="intro-content" class="intro-content">
           <h2>Hello, I'm Abhishek <span style='font-size:50px;'>&#128075;</span></h2>
           <!-- <h2> I'm Abhishek <span style='font-size:50px;'>&#128075;</span></h2> -->
-          <h1>Student & A Full Stack Software Engineer.</h1>
+          <h1>Student & A Full Stack <br> Software Developer.</h1>
           <h5>
             I'm a Graduate Student at Illinois Tech, Chicago.<br />
             I build Web and Mobile applicatoins and i'm currently looking for
@@ -94,12 +95,14 @@
 
 
       <section id="About" class="About">
-        <div class="About-content"></div>
+        <div class="About-content">
+          <H1>About</H1>
+        </div>
       </section>
 
 
       <section id="Skills" class="Skills">
-        <!-- <h1>Skills</h1> -->
+        <h1>Skills</h1>
         <div class="skills-container">
           <div class="heading">
             <h2>My Expertise</h2> 
@@ -128,38 +131,6 @@
           <p  style="word-spacing: 2em; font-weight:bold; font-size:1em" class="card__body">SpringBoot Hibernate Docker Git Jenkins Postman CI/CD  Junit</p>
         </div>
     </div>
-          <!-- <div class="skills-content"> -->
-          <!-- <div class="titles">
-            <ul>
-              <li><h2>Font-End</h2></li>
-              <li><h2>Backend</h2></li>
-              <li><h2>Cloud</h2></li>
-              <li><h2>Other</h2></li>
-            </ul>
-          </div> -->
-          <!-- <div class="techstack">
-            <ul>
-              <li><div class="tech-icons">C, C++ , Java , python</div></li>
-              <li><div class="tech-icons">HTML, CSS, JavaScript , ReactJS , NodeJS</div></li>
-              <li><div class="tech-icons">MySql , PostgreSQL , MongoDB</div></li>
-              <li><div class="tech-icons">SpringBoot</div></li>
-              <li><div class="tech-icons">Machine Learning</div></li>
-              <li><div class="tech-icons">AWS ,GCP(Essesntials)</div></li>
-              <li><div class="tech-icons">Docker, Git, Jenkins, Postman , CI/CD , Junit</div></li>
-            </ul>
-          </div> -->
-          <!-- <div class="techstack">
-            <ul>
-              <li><div class="tech-icons"><img src="res/TechIcons/c.png" alt="C"/> <img src="res/TechIcons/c (1).png" alt="C++"/> <img src="res/TechIcons/java.png" alt="Java"/> <img src="res/TechIcons/python.png" alt="Python"></div></li>
-              <li><div class="tech-icons"> <img src="res/TechIcons/html5.png" alt="HTML"/><img src="res/TechIcons/css.png" alt="CSS"><img src="res/TechIcons/javascript.png" alt="JavaScript"><img src="res/TechIcons/react.png" alt="ReactJS"><img src="res/TechIcons/nodejs.png" alt="NodeJS"></div></li>
-              <li><div class="tech-icons"> <img src="res/TechIcons/mysql.png" alt="MySql"> <img src="res/TechIcons/postgresql.png" alt="PostgreSQL"><img src="res/TechIcons/mongodb.png" alt="MongoDB"></div></li>
-              <li><div class="tech-icons"><img src="res/TechIcons/1614368.png" alt="SpringBoot"></div></li>
-              <li><div class="tech-icons"><img src="" alt="Machine Learning"></div></li>
-              <li><div class="tech-icons"><img src="res/TechIcons/aws.png" alt="AWS"><img src="res/TechIcons/pngfind.com-google-logo-png-2017-4909861.png" alt="GCP(Essesntials)"> ,</div></li>
-              <li><div class="tech-icons"><img src="res/TechIcons/docker.png" alt="Docker"><img src="res/TechIcons/git.png" alt="Git"><img src="res/TechIcons/jenkins.png" alt="Jenkins"><img src="res/TechIcons/postman.png" alt="Postman"></div></li>
-            </ul>
-          </div> -->
-        <!-- </div> -->
       </div>
       </section>
 
@@ -197,18 +168,12 @@
                 </a>
               </li>
               <li onclick="copyPhone()">
-                <img title="click to copy Phone Number" class="contact-icons-svg" src="res/phone-solid.svg" alt="Phone">
+                <img title="(312)-776-4840 click to copy Phone Number" class="contact-icons-svg" src="res/phone-solid.svg" alt="Phone">
               </li>
               <li onclick="copyEmail()">
                 <img title="click to copy Emails" class="contact-icons-svg" src="res/envelope-solid.svg" alt="email">
               </li>
             </ul>
-
-            <!-- <ul class="c-links">
-                        <li><a href="http://www.linkedin.com/in/abhishek-bonageri" target="_blank">LinedIn</a></li>
-                        <li>Phone</li>
-                        <li>E-Mail</li>
-                    </ul> -->
           </div>
           <div class="c-info email-form">
             <form action="https://formsubmit.co/abonageri@hawk.iit.edu" method="POST">
