splash comment removed

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   </head>
   <body>
     <div class="container">
-      <!-- <div class="splash">
+      <div class="splash">
         <h1 class=" fade-in" >Welcome to my portfolio.</h1>
         <span style="position: absolute;margin:auto 40%; bottom: 0em; display:table;" class="float-bottom fade-in"><p>Google CHROME Recomended.</p></span>
-      </div> -->
+      </div>
     
       <section id="Intro" class="Intro">
         <div class="header">
