--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!-- <h1>Skills</h1> -->
         <div class="skills-container">
           <div class="heading">
-            <h2>My Expertise</h2> 
+            <h1 padding-bottom="1rem" >My Expertise</h1> 
           </div>
           <div style="margin-bottom: vh; margin-top:1vh" class="content content--card">
             <div class="card">
@@ -140,6 +140,7 @@
         
         <div class="Projects-container"> 
           <div class="project-headings">
+            <h1>Some of my best works</h1>
             <h2>WebApps</h2>
           </div>
         <section class="card-list">
