ui changes made

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!-- <h1>Skills</h1> -->
         <div class="skills-container">
           <div class="heading">
-            <h1 padding-bottom="1rem" >My Expertise</h1> 
+            <h2 style="font-size:2.5rem;color: white;" >My Expertise</h> 
           </div>
           <div style="margin-bottom: vh; margin-top:1vh" class="content content--card">
             <div class="card">
@@ -140,8 +140,8 @@
         
         <div class="Projects-container"> 
           <div class="project-headings">
-            <h1>Some of my best works</h1>
-            <h2>WebApps</h2>
+            <h1 style="font-size:2rem" >Some of my best works</h1>
+            <h3>WebApps</h3>
           </div>
         <section class="card-list">
           <article class="cardd">
