--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
       <section id="Projects" class="Projects">
         
         <div class="Projects-container"> 
+          <div class="popup">
+            <p>Scroll ( ↓↓↓ ) for more projects.</p>
+          </div>
           <div class="project-headings">
             <h1 style="font-size:2rem" >Some of my best works</h1>
             <h3>WebApps</h3>
