completed intro content mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
       <div id="intro-content" class="intro-content">
-        <h2>Hello, I'm Abhishek <span style='font-size:50px;'>&#128075;</span></h2>
+        <h2>Hello, I'm Abhishek &#128075 </h2>
         <!-- <h2> I'm Abhishek <span style='font-size:50px;'>&#128075;</span></h2> -->
         <h1>Student & A Full Stack <br> Software Developer.</h1>
         <h5>
