completed mobile responsivness for contact me section

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
             know if you require any further information.
           </h4>
           <h5 >
-            I would love to hear from you. &#128516;
+            I would love to hear from you.&#128516;
           </h5>
 
           <ul class="c-links-icon">
@@ -513,10 +513,10 @@
           <form action="https://formsubmit.co/abonageri@hawk.iit.edu" method="POST">
 
             <input type="hidden" name="_next" value="https://abhishekb.netlify.app/thanks/thanks.html">
-            <input type="text" id="fname" name="firstname" placeholder="Full name.." required>
-            <input type="email" id="email" name="email" placeholder="Email.." required>
-            <textarea id="subject" name="subject" placeholder="Your Message.." style="height:180px" required></textarea>
-            <input type="submit" value="Send">
+            <input class="mrc" type="text" id="fname" name="firstname" placeholder="Full name.." required>
+            <input class="mrc" type="email" id="email" name="email" placeholder="Email.." required>
+            <textarea class="mrc" id="subject" name="subject" placeholder="Your Message.." style="height:180px" required></textarea>
+            <input class="mrc" type="submit" value="Send">
 
           </form>
         </div>
