--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <div class="container">
     <div class="splash">
       <h1 class=" fade-in">Welcome to my portfolio.</h1>
-      <span style="position: absolute;margin:auto 40%; bottom: 0em; display:table;" class="float-bottom fade-in">
-        <p>Google CHROME Recomended.</p>
+      <!-- <span style="position: absolute;margin:auto 40%; bottom: 0em; display:table;" class="float-bottom fade-in">
+        <p>Google CHROME Recomended.</p> -->
       </span>
     </div>
 
