about content and mobile responsivness added

--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
 
 <body>
   <div class="container">
-    <div class="splash">
+    <!-- <div class="splash">
       <h1 class=" fade-in">Welcome to my portfolio.</h1>
-      <!-- <span style="position: absolute;margin:auto 40%; bottom: 0em; display:table;" class="float-bottom fade-in">
-        <p>Google CHROME Recomended.</p> -->
+
       </span>
-    </div>
+    </div> -->
 
     <section id="Intro" class="Intro">
       <div class="header">
@@ -60,8 +59,8 @@
         <h1>Student & A Full Stack <br> Software Developer.</h1>
         <h5>
           I'm a Graduate Student at Illinois Tech, Chicago.<br />
-          I build Web and Mobile applicatoins and i'm currently looking for
-          summer internships(2022).
+          I build responsive Web and Mobile applicatoins &<br/><br> 
+          I'm currently looking for <br/><u><font size="5%" color="white"> Summer Internships(2022)</font></u>
         </h5>
         <!-- <h5>and currently looking for summer internships(2022)</h5> -->
         <!-- <div class="btn">
@@ -79,9 +78,24 @@
 
 
     <section id="About" class="About">
-      <div class="About-content">
-        <H1>About</H1>
-      </div>
+        <div class="about-content">
+          <div class="about-heading">
+            <h2>About Me</h2>
+          </div>
+          <div class="about-para">
+            <p>Hey , I'm Abhishek Bonageri and I love developing things for the users </p>
+            <p>Hey , I'm Abhishek Bonageri and I love developing things for the users </p>
+            <p>Hey , I'm Abhishek Bonageri and I love developing things for the users </p>
+          </div>
+          <div class="extras">
+            <ul>
+              <li>▹ Horse Riding</li>
+              <li>▹ Playing Soccer</li>
+              <li>▹ Cooking</li>
+              <li>▹ Bike Riding</li>
+            </ul>
+          </div>
+        </div>
     </section>
 
 
@@ -125,9 +139,9 @@
     <section id="Projects" class="Projects">
 
       <div class="Projects-container">
-        <div class="popup">
+        <!-- <div class="popup">
           <p>Scroll ( ↓↓↓ ) for more projects.</p>
-        </div>
+        </div> -->
         <div class="project-headings">
           <h1 style="font-size:2rem">Some of my best works</h1>
           <h3>WebApps</h3>
@@ -236,7 +250,7 @@
 
         </section>
         <div class="project-headings">
-          <h3>Concepts Learnt :</h3>
+          <h3><p>Scroll ( ↓↓↓ ) for more projects.</p></h3>
         </div>
       </div>
 
@@ -245,7 +259,7 @@
       <!-- <h1>Projects</h1> -->
       <div class="Projects-container">
         <div class="project-headings">
-          <h2>SpringBoot Apps</h2>
+          <h3>SpringBoot Apps</h3>
         </div>
         <section class="card-list">
           <article class="cardd">
@@ -351,7 +365,7 @@
 
         </section>
         <div class="project-headings">
-          <h3>Concepts Learnt :</h3>
+          <h3><p>Scroll ( ↓↓↓ ) for more projects.</p></h3>
         </div>
       </div>
 
@@ -362,7 +376,7 @@
       <!-- <h1>Projects</h1> -->
       <div class="Projects-container">
         <div class="project-headings">
-          <h2>Android Apps:</h2>
+          <h3>Android Apps:</h3>
         </div>
         <section class="card-list">
           <article class="cardd">
@@ -467,9 +481,9 @@
           </article>
 
         </section>
-        <div class="project-headings">
+        <!-- <div class="project-headings">
           <h3>Concepts Learnt :</h3>
-        </div>
+        </div> -->
       </div>
 
     </section>
