--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section id="About" class="About">
         <div class="about-content">
           <div class="about-heading">
-            <h2>About Me</h2>
+            <h2 style="font-size:2.5rem;color: white;">About Me</h2>
           </div>
           <div class="about-para">
             <p>Hey , I'm Abhishek Bonageri and I love developing things for the users </p>
