skill section mobile responsive

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h1>Student & A Full Stack <br> Software Developer.</h1>
         <h5>
           I'm a Graduate Student at Illinois Tech, Chicago.<br />
-          I build responsive Web and Mobile applicatoins &<br/><br> 
+          I build responsive Web and Mobile applicatoins &<br/><br> <br>
           I'm currently looking for <br/><u><font size="5%" color="white"> Summer Internships(2022)</font></u>
         </h5>
         <!-- <h5>and currently looking for summer internships(2022)</h5> -->
