projects mobile respon.. added

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section id="About" class="About">
         <div class="about-content">
           <div class="about-heading">
-            <h2 style="font-size:2.5rem;color: white;">About Me</h2>
+            <h2 style="font-size:2.5rem;color: white;"><br>About Me</h2>
           </div>
           <div class="about-para">
             <p>Hey , I'm Abhishek Bonageri and I love developing things for the users </p>
@@ -103,7 +103,7 @@
       <!-- <h1>Skills</h1> -->
       <div class="skills-container">
         <div class="heading">
-          <h2 style="font-size:2.5rem;color: white;">My Expertise</h>
+          <h2 style="font-size:2.5rem;color: white;"><br>My Expertise</h>
         </div>
         <div style="margin-bottom: vh; margin-top:1vh" class="content content--card">
           <div class="card">
@@ -143,7 +143,7 @@
           <p>Scroll ( ↓↓↓ ) for more projects.</p>
         </div> -->
         <div class="project-headings">
-          <h1 style="font-size:2rem">Some of my best works</h1>
+          <h1 >Some of my best works</h1>
           <h3>WebApps</h3>
         </div>
         <section class="card-list">
@@ -247,9 +247,8 @@
               <a href="#">Demo</a>
             </div>
           </article>
-
         </section>
-        <div class="project-headings">
+        <div class="project-bottom">
           <h3><p>Scroll ( ↓↓↓ ) for more projects.</p></h3>
         </div>
       </div>
@@ -364,7 +363,7 @@
           </article>
 
         </section>
-        <div class="project-headings">
+        <div class="project-bottom">
           <h3><p>Scroll ( ↓↓↓ ) for more projects.</p></h3>
         </div>
       </div>
