--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
 <body>
   <div class="container">
-    <!-- <div class="splash">
+    <div class="splash">
       <h1 class=" fade-in">Welcome to my portfolio.</h1>
 
       </span>
-    </div> -->
+    </div>
 
     <section id="Intro" class="Intro">
       <div class="header">
