--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
 <body>
   <div class="container">
-    <div class="splash">
+    <!-- <div class="splash">
       <h1 class=" fade-in">Welcome to my portfolio.</h1>
 
       </span>
-    </div>
+    </div> -->
 
     <section id="Intro" class="Intro">
       <div class="header">
@@ -43,7 +43,7 @@
           <ul data-visible="false" class="primary-navigation flex">
             <li><a href="#About">About</a></li>
             <li><a href="#Skills">Skills</a></li>
-            <li><a href="#Projects">Projects</a></li>
+            <li><a href="#PJ">Projects</a></li>
             <!-- <li><a href="#Experience">Experience</a></li> -->
             <li><a href="#Contact">Contact</a></li>
             <li id="res">
@@ -135,17 +135,16 @@
       </div>
     </section>
 
+    <div id="PJ">
+
+    </div>
 
     <section id="Projects" class="Projects">
-
+      <div id="proj" class="project-headings pheads-pbottom">
+        <h1 >Some of my best works</h1>
+        <h3>Web & Spring-Boot Applications</h3>
+      </div>
       <div class="Projects-container">
-        <!-- <div class="popup">
-          <p>Scroll ( ↓↓↓ ) for more projects.</p>
-        </div> -->
-        <div class="project-headings">
-          <h1 >Some of my best works</h1>
-          <h3>WebApps</h3>
-        </div>
         <section class="card-list">
           <article class="cardd">
             <header class="card-header">
@@ -248,14 +247,12 @@
             </div>
           </article>
         </section>
-        <div class="project-bottom">
-          <h3><p>Scroll ( ↓↓↓ ) for more projects.</p></h3>
-        </div>
       </div>
-
+      <div class="project-bottom pheads-pbottom ">
+        <h5><p>( ↓↓↓ )</p></h5>
+      </div>
     </section>
-    <section id="Projects" class="Projects">
-      <!-- <h1>Projects</h1> -->
+    <!-- <section id="Projects" class="Projects">
       <div class="Projects-container">
         <div class="project-headings">
           <h3>SpringBoot Apps</h3>
@@ -368,15 +365,16 @@
         </div>
       </div>
 
-    </section>
+    </section> -->
 
 
-    <section id="Projects" class="Projects">
+    <section id="Projects "  class="Projects AndroidProjects">
       <!-- <h1>Projects</h1> -->
+      <div class="project-headings pheads-pbottom ">
+        <h3>Android Projects:</h3>
+      </div>
       <div class="Projects-container">
-        <div class="project-headings">
-          <h3>Android Apps:</h3>
-        </div>
+        
         <section class="card-list">
           <article class="cardd">
             <header class="card-header">
